--- a/index.html
+++ b/index.html
@@ -1,3 +1,80 @@
-<html>
-  Contains Assignment for SGI / SITR
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sampoorna Group of Institutions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        h1, h2 {
+            color: #333;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Welcome to Sampoorna Group of Institutions</h1>
+    </header>
+
+    <section>
+        <h2>Python Programming</h2>
+        <p>Explore Python programming topics:</p>
+        <ul>
+            <li><a href="python/module_1/">Module 1: Introduction to Python</a></li>
+            <li><a href="python/module_2/">Module 2: Advanced Python Concepts</a></li>
+            <!-- Add more Python programming topics as needed -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Java Programming</h2>
+        <p>Discover Java programming topics:</p>
+        <ul>
+
+            <!-- Add more Java programming topics as needed -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Python Lab Mathematics</h2>
+        <p>Engage in Python lab mathematics:</p>
+        <ul>
+
+            <!-- Add more Python lab mathematics topics as needed -->
+        </ul>
+    </section>
+
+    <!-- Include the footer using the object tag -->
+    <object type="text/html" data="footer.html" width="100%" height="100px"></object>
+
+
+
+</body>
 </html>
