--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <h2>Python Programming</h2>
         <p>Explore Python programming topics:</p>
         <ul>
-            <li><a href="python/module_1/">Module 1: Introduction to Python</a></li>
-            <li><a href="python/module_2/">Module 2: Advanced Python Concepts</a></li>
+            <li><a href="python/module_1/">Module 1: Python Basics ( Loops, Functions and Mdoule basics ) </a></li>
+            <li><a href="python/module_2/">Module 2:s</a></li>
             <!-- Add more Python programming topics as needed -->
         </ul>
     </section>
