--- a/python/module_1/index.html
+++ b/python/module_1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+    <h1> Module 1 - Python Basics ( Loops, Methods and module basics )</h1>
     <ul>
         <li><a href="https://sitrcs.xbitlabs.org/python/module_1/1_operators.html">1_operators</a></li>
         <li><a href="https://sitrcs.xbitlabs.org/python/module_1/2_loops.html">2_loops</a></li>
@@ -26,6 +27,9 @@
         <li><a href="https://sitrcs.xbitlabs.org/python/module_1/16_practice_questions_strings.html">16_practice_questions_strings</a></li>
     </ul>
 
+
+    <object type="text/html" data="http://sitrcs.xbitlabs.org/footer.html" width="100%" height="100px"></object>
+
+
 </body>
 </html>
-
